fix bug with compare thumb mode